force-app/main/default/objects/Rule__c/fields/Evaluation_Object__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Object__c</fullName>
    <label>Evaluation Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Product2</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>QuoteLineItem</fullName>
                <isActive>false</isActive>
                <label>QuoteLineItem</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>