force-app/main/default/objects/Rule__c/fields/Rule_Expression__c.field-meta.xml
<CustomField>
    <fullName>Rule_Expression__c</fullName>
    <label>Rule Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>