force-app/main/default/objects/Rule__c/fields/Rule_Service__c.field-meta.xml
<CustomField>
    <fullName>Rule_Service__c</fullName>
    <label>Rule Service</label>
    <length>150</length>
    <type>Text</type>
</CustomField>