force-app/main/default/objects/Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Product Compatibility</fullName>
            </value>
            <value>
                <fullName>Attribute</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Product Aggregation Rule(s)</fullName>
            </value>
            <value>
                <fullName>Attribute Pricing</fullName>
            </value>
            <value>
                <fullName>Pricing Rule(s)</fullName>
            </value>
            <value>
                <fullName>Attribute Compatibility Rule(s)</fullName>
                <isActive>false</isActive>
                <label>Attribute Compatibility Rule(s)</label>
            </value>
            <value>
                <fullName>Product Compatibility Rule(s)</fullName>
                <isActive>false</isActive>
                <label>Product Compatibility Rule(s)</label>
            </value>
            <value>
                <fullName>Qualification Rule(s)</fullName>
                <isActive>false</isActive>
                <label>Qualification Rule(s)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>