force-app/main/default/objects/Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rule_Expression__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>